This is a record of changes to SerialEM since it was first publicly released.

* marks changes or enhancements noticeable to the user, or items of particular
significance.
============================================================================
1/10/20: Updated Navigator coordinates in montage piece when a point is moved
(In 3.7).

1/8/20: Fixed RawElectronStats to give raw dose rate instead of linearized one
from DM (In 3.7).

12/27/19: Added script commands to: make a script read-only below a certain
point unless in administrator mode; look for files whose paths and names match
a specified pattern; run scripts from files whose names match a pattern; allow
strings to be enclosed in single quotes; do an image shift equivalent to a
specified stage shift.  Also added multiline commenting delimited by /* and
*/.  Eliminated Scripts - Save All menu item.

12/27/19: If Navigator registration number is changed during an acquire, it
now continues to acquire at the new registration.

12/24/19: Made scripts be saved in a separate file from settings, so that
different settings file can share the same scripts.  When reading in a new
settings file, existing scripts in positions that are empty in the settings
file or its associated package of scripts will now be lost instead of
retained.

12/24/19: When a Navigator item is moved to a different map, its DrawnOnID and
Z value are assigned from the new map.

12/20/19: Fixed End Nav button bringing up Resume dialog when tilt series
running (In 3.7).

12/18/19: Made frame tilt series create a frame stack mdoc file with tilt
angles, relative timing, and dose information included, and added ability
to write a command file for aligning with Alignframes, including thresholds
for excluding partial frames from alignment.  (New SEMCCD plugin needed).

12/13/19: Added ability to remove positions from regular array of holes for
multiple Records.

12/13/19: Added predicted relative starting and ending frame numbers to tilt